#登录功能对接调整